--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Allin_Android"
         tools:targetApi="31">
         <activity
+            android:name=".app_list"
+            android:exported="false" />
+        <activity
+            android:name=".dnevnik"
+            android:exported="false" />
+        <activity
+            android:name=".clock"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
